# iaEditais-back

./: .coverage  .dockerignore  .env.exemple  .gitignore  404.html  Dockerfile  README.md  compose.yaml  compose.yml  entrypoint.sh  index.html  init.sql  metrics.md  mkdocs.yml  pyproject.toml  run.py  script.sql  script_v2.sql  seeds.sql  supervisord.conf  test_cases.md  test_collections.md  test_runs.md
.github/workflows/: deploy-main.yaml  validate-develop.yaml
api/: index.html
demo/: app.py  config.py  streamlit.css  streamlit.py
demo/hooks/: order.py  publication.py  source.py  taxonomy.py
demo/methodology/: branch.py  taxonomy.py  typification.py
demo/publication/: publication.py
demo/source/: source.py
dev/: index.html
dev/api_reference/: index.html
dev/architecture/: index.html
docs/: index.md
docs/api/: index.md
docs/dev/: api_reference.md  architecture.md  index.md
docs/resources/: analysis.md  index.md  order.md  taxonomy.md  tree.md
iaEditais/: __init__.py  app.py  config.py  database.py  dependencies.py  models.py  prompts.py  schemas.py  security.py  settings.py
iaEditais/core/: broker.py  cache.py  connection.py  database.py  dependencies.py  llm.py  model.py  security.py  settings.py  storage_provider.py  vectorstore.py  ws.py
iaEditais/events/: events.py
iaEditais/integrations/: Integrations.py  Intergrations.py  OrderIntegrations.py  __init__.py  database.py  release_integration.py
iaEditais/models/: auth_schemas.py  branch_model.py  doc.py  source_model.py  source_models.py  taxonomy_model.py  typification_model.py  unit_model.py  user_model.py  user_units.py
iaEditais/repositories/: DocumentRepository.py  OrderRepository.py  SourceRepository.py  TaxonomyRepository.py  TypificationRepository.py  __init__.py  branch_repo.py  bundle_repo.py  database.py  doc_repo.py  doc_repository.py  evaluation_repository.py  kanban_repo.py  message_repo.py  release_repo.py  releases_repository.py  source_repo.py  source_repository.py  statistics_repository.py  taxonomy_repo.py  taxonomy_repository.py  tree_repository.py  typification_repo.py  unit_repo.py  unit_repository.py  user_repo.py  user_repository.py  user_unit_repository.py  util.py
iaEditais/repository/: releases_repository.py
iaEditais/routers/: DocumentRouter.py  EvaluationRouter.py  OrderRouter.py  SourceRouter.py  TaxonomyRouter.py  auth.py  branch_router.py  doc.py  doc_router.py  reports.py  source.py  source_router.py  statistics.py  stats.py  system.py  taxonomy_router.py  typification_router.py  unit.py  units.py  user.py  user_units.py  users.py
iaEditais/schemas/: Document.py  Evaluation.py  Guideline.py  Order.py  Source.py  Taxonomy.py  Typification.py  __init__.py  audit_log.py  branch.py  bundle.py  common.py  doc.py  document.py  document_history.py  document_message.py  document_release.py  evaluation.py  source.py  system.py  taxonomy.py  typification.py  unit.py  user.py
iaEditais/services/: DocumentService.py  OrderService.py  SourceService.py  TaxonomyService.py  TypificationService.py  audit.py  audit_service.py  auth_service.py  branch_service.py  bundle_service.py  doc_service.py  evaluation_service.py  kanban_service.py  message_service.py  notification_service.py  release_logic_service.py  release_orchestrator.py  releases_service.py  report_service.py  source_service.py  statistics_service.py  storage_service.py  taxonomy_service.py  tree_service.py  typification_service.py  unit_service.py  user_service.py  user_unit_service.py  vector_service.py  vstore_service.py
iaEditais/utils/: InstanceCounterAnonymizer.py  InstanceCounterDeanonymizer.py  PresidioAnonymizer.py  PresidioDeanonymizer.py
iaEditais/workers/: __init__.py  releases.py  utils.py
migrations/: env.py
migrations/versions/: 0452b4611255_acompanhamento_do_processamento_do_.py  04f324aaecb3_.py  06d6dae7c62b_descrição_humanizada_para_os_logs.py  0a610a127891_fox_regra_de_unicidade_nos_documentos.py  0d897444b2a4_remove_input_from_test_cases.py  167e5c361c80_tsv_para_partes_criticas.py  17903543bd7d_imagens_usuario.py  20ac25fed6c6_add_is_test_flag_and_test_run_status_.py  21933005af4e_arquivamento.py  382e87b0eb8e_.py  39015d7b52aa_quebrando_regras_de_unicidade.py  3aa7905a3cdd_remove_status_from_test_run.py  3d3b9056c217_salvando_dados_do_presidio.py  43508ecdaeda_description_of_changes.py  453fbd69a0e7_reset_pasword.py  4a301c46a1fe_add_passed_fulfilled_to_test_results.py  4b559b72da07_mig2.py  4dbbbd067820_.py  517707af7e79_.py  5828b1b1c11b_mig3.py  5b4d2b6591d5_adicionando_indices_com_where.py  5dc8a7f2040b_make_doc_id_required_in_test_cases.py  72df5d6c7400_.py  7efe5b245c25_colunas_tsv.py  80aac6f5448c_mensagens_para_documentos.py  836a80fde2a7_relacionando_imagens_a_users.py  85d08c533394_.py  8d47b9dbf122_adicionar_campos_de_evaluation.py  949464c31090_.py  988e3e27cd58_.py  9cd4b0451360_adicionando_arquivos_na_fonte.py  9d458ebede34_move_doc_id_to_test_run.py  a9c06671bd3a_add_test_case_id_to_test_runs.py  b2813f8606fb_.py  b8abf8d05ac6_implementação_até_a_etapa_de_documentos.py  b8d6d5117196_.py  ba6cebecda09_id_de_unidade_em_documentos.py  c16dca6e0f2c_versão_estavel.py  cc35d1217ac6_.py  cde58d0204ca_mig.py  (+8 more)
resources/: index.html
resources/analysis/: index.html
resources/order/: index.html
resources/taxonomy/: index.html
resources/tree/: index.html
scripts/benchmark/: bm_DeepSeek.py  bm_Google.py  bm_Ollama.py  bm_OpenAI.py  main.py
search/: search_index.json
storage/: taxonomy-agu.xlsx  taxonomy.json
storage/benchmark/: benchmark.csv  benchmark.deepseek.csv  (+2 more)
tests/: conftest.py  factories.py  test_app.py  test_audit.py  test_auth.py  test_branch.py  test_db.py  test_docs.py  test_evaluate.py  test_guideline.py  test_guidelines.py  test_ia.py  test_order.py  test_source.py  test_statistics.py  test_system.py  test_taxonomy.py  test_typification.py  test_unit.py  test_user.py  test_user_unit.py  tree_test_editais.xlsx
(+59 files in other folders)
