[project]
name = "iaEditais"
version = "2.0.0"
description = "This API was developed to assist in the preparation and analysis of public procurement notices, employing Artificial Intelligence (AI) techniques. The goal is to increase accuracy, compliance, and efficiency in the creation and review of notices, reducing errors and inconsistencies."
authors = [{name = "gmcosta",email = "geu_costa@outlook.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = ["fastapi[standard] (>=0.120.1,<0.121.0)", "pydantic-settings (>=2.11.0,<3.0.0)", "sqlalchemy (>=2.0.44,<3.0.0)", "alembic (>=1.17.0,<2.0.0)", "psycopg[binary] (>=3.2.12,<4.0.0)", "pyjwt (>=2.10.1,<3.0.0)", "pwdlib[argon2] (>=0.3.0,<0.4.0)", "langchain (>=1.0.2,<2.0.0)", "langchain-openai (>=1.0.1,<2.0.0)", "langchain-postgres (>=0.0.16,<0.0.17)", "langchain-community (>=0.4.1,<0.5.0)", "faststream[rabbit] (>=0.6.2,<0.7.0)", "pymupdf (>=1.26.5,<2.0.0)", "redis[async] (>=7.0.1,<8.0.0)", "pika (>=1.3.2,<2.0.0)", "langchain-text-splitters (>=1.0.0,<2.0.0)", "json5 (>=0.12.1,<0.13.0)", "tomli (>=2.3.0,<3.0.0)", "reportlab (>=4.4.4,<5.0.0)", "presidio-anonymizer (>=2.2.360,<3.0.0)", "presidio-analyzer (>=2.2.360,<3.0.0)", "opentelemetry-distro (>=0.60b1,<0.61)", "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)", "langchain-docling (>=2.0.0,<3.0.0)", "opencv-python (>=4.13.0.90,<5.0.0.0)", "aiofiles (>=25.1.0,<26.0.0)", "aioboto3 (>=15.5.0,<16.0.0)"]

[tool.poetry]
packages = [{include = "iaEditais"}]

[tool.poetry.urls]
Homepage = "http://52.5.144.13:3000/"
Documentation = "https://meirelesgc.github.io/iaEditais-back"
Repository = "https://github.com/meirelesgc/iaEditais-back.git"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.11"
taskipy = "^1.14.1"
testcontainers = {extras = ["rabbitmq"], version = "^4.13.2"}
pytest-asyncio = "^1.2.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = 'function'
filterwarnings = [
    "ignore:.*Specifying 'lifespan_context' manually is no longer necessary.*:RuntimeWarning",
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.taskipy.tasks]
run = 'fastapi dev iaEditais/app.py'
test = 'pytest -s -x --cov=iaEditais -vv'
cov = 'coverage html'